<resources>
    <string name="app_name">Borders</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="how_to_play">How to Play</string>
    <string name="title_activity_display_instructions">Instructions</string>
    <string name="title_activity_continent_select">Choose Continent</string>
    <string name="title_activity_continent_menu">Choose Continent</string>
    <string name="title_activity_country_select">Choose Country</string>
    <string name="quest_country_name">Question Country</string>
    <string name="test_country_name">Test Country</string>
    <string name="prompt_activity_game">Border????</string>
    <string name="banner_alt">banner alt</string>
    <string name="title_activity_game">Borders and Lives Here</string>
    <string name="yes">Y</string>
    <string name="no">N</string>
</resources>
