<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >
        tools:context="dylan.borders.GameActivity">
    <TextView
        android:id="@+id/titleActivityGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_game"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/imageTestCountryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleActivityGame"
        android:gravity="center"
        android:text="@string/test_country_name"
        android:textStyle="bold"
        android:textColor="#000000" />
      <ImageView
        android:id="@+id/imageTestCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageTestCountryName"
        android:background="#00FF00"
        android:gravity="center"
        android:contentDescription="@string/banner_alt" />
      <ImageView
        android:id="@+id/imageQuestCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageTestCountry"
          android:background="#00FF00"
          android:gravity="center"
        android:contentDescription="@string/banner_alt" />
    <TextView
        android:id="@+id/imageQuestCountryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageQuestCountry"
        android:gravity="center"
        android:text="@string/quest_country_name"
        android:textStyle="bold"
        android:textColor="#000000" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageQuestCountryName"
        android:orientation="horizontal"
        android:weightSum="1.0"
        >

        <Button android:id="@+id/borderYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:background="@drawable/btn_default_normal_green"
                android:layout_weight=".2"
                android:layout_gravity="left"
                android:onClick="setBorderAnswer"
            />

        <TextView
            android:id="@+id/borderPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_default_normal_lblue"
            android:layout_weight=".2"
            android:text="@string/prompt_activity_game"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="right"
            />

        <Button android:id="@+id/borderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:background="@drawable/btn_default_normal_red"
                android:layout_weight=".2"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:onClick="setBorderAnswer"
            />


    </LinearLayout>
</RelativeLayout>

